--- a/app/src/main/res/layout/nav_header_inicio.xml
+++ b/app/src/main/res/layout/nav_header_inicio.xml
@@ -22,6 +22,8 @@
         android:id="@+id/txtNombre"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/editTextColorBlack"
+        android:textStyle="bold"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="Android Studio"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
@@ -30,6 +32,7 @@
         android:id="@+id/txtEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/editTextColorBlack"
         android:text="android.studio@android.com" />
 
 </LinearLayout>
