--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00796B</color>
-    <color name="colorPrimaryDark">#009688</color>
-    <color name="colorAccent">#009688</color>
+    <color name="colorPrimary">#ffffff</color>
+    <color name="colorPrimaryDark">#B8B8B8</color>
+    <color name="colorAccent">#00796B </color>
+    <color name="colorAccentClaro">#009688   </color>
+
     <color name="editTextColorWhite">#ffffff</color>
+    <color name="editTextColorGris">#B8B8B8</color>
     <color name="editTextColorBlack">#000000</color>
+    <color name="editTextColorBlackOpacy">#616161</color>
+
+
 </resources>
